# better-synag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  protocol.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  db.py  errors.py  main.py  models.py
app/services/: device_service.py  icv6_client.py  preset_service.py  validation_service.py  validator.py
app/static/: app.js  styles.css
app/static/js/: chart-controller.js  constants.js  http.js  modal.js
app/templates/: dashboard.html
tests/: conftest.py  test_api.py  test_db.py  test_icv6_client.py  test_validator.py
